revops-lab/main/default/objects/Discount_Policy__c/Discount_Policy__c.object-meta.xml
<CustomObject>
    <description>Effective-dated maximum discount per product family. Business data maintained in the org by Finance (contrast with Approval_Routing__mdt, which is deployed configuration).</description>
    <label>Discount Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Policies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>