revops-lab/main/default/objects/Discount_Policy__c/fields/Max_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percent__c</fullName>
    <label>Max Discount %</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>