revops-lab/main/default/objects/Discount_Policy__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Must match Product2.Family exactly.</inlineHelpText>
    <label>Product Family</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>