revops-lab/main/default/objects/Discount_Policy__c/validationRules/Effective_Dates_In_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Dates_In_Order</fullName>
    <active>true</active>
    <description>End date cannot be before the start date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), Effective_To__c &lt; Effective_From__c)</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Effective To cannot be before Effective From.</errorMessage>
</ValidationRule>