revops-lab/main/default/objects/Discount_Policy__c/validationRules/Max_Discount_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Discount_In_Range</fullName>
    <active>true</active>
    <description>Maximum discount must be between 0% and 100%.</description>
    <errorConditionFormula>OR(Max_Discount_Percent__c &lt; 0, Max_Discount_Percent__c &gt; 1)</errorConditionFormula>
    <errorDisplayField>Max_Discount_Percent__c</errorDisplayField>
    <errorMessage>Maximum discount must be between 0% and 100%.</errorMessage>
</ValidationRule>