revops-lab/main/default/objects/Discount_Policy__c/validationRules/Requires_Manage_Policy_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Manage_Policy_Permission</fullName>
    <active>true</active>
    <description>Only holders of the Sales_Manage_Discount_Policy custom permission may create or change policies, even if object permissions are granted by mistake.</description>
    <errorConditionFormula>NOT($Permission.Sales_Manage_Discount_Policy)</errorConditionFormula>
    <errorMessage>You do not have permission to maintain discount policies.</errorMessage>
</ValidationRule>